--- a/source/catalog.html
+++ b/source/catalog.html
@@ -76,8 +76,10 @@
         <div class="big-photos__wrapper">
           <div class="photos__comment">
             <p class="comment__author-name"><b>Анна</b>(5 минут назад)</p>
-            <p class="comment__like"><img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"><b>нравится: 215</b></p>
             <p class="comment__text">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
+            <div class="conversely-comment__like">
+              <p class="comment__like"><img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"><b>нравится: 215</b></p>
+            </div>
           </div>
         </div>
         <div class="photos__wrapper">
@@ -85,7 +87,9 @@
             <div class="photos__comment">
               <p class="comment__author-name"><b>Левон</b>(5 часов назад)</p>
               <p class="comment__text">Вчера он на луну летал,сегодня в руки к нам попал.</p>
-              <p class="comment__like"><img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"><b>нравится: 356</b></p>
+              <div class="conversely-comment__like">
+                <p class="comment__like"><img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"><b>нравится: 356</b></p>
+              </div>
             </div>
           </div>
           <div class="user__photos">
