Исправил ошибку в форме

--- a/source/form.html
+++ b/source/form.html
@@ -128,36 +128,30 @@
                   <legend>ваши безбашенные достижения в путешествии</legend>
                   <div class="checkbox-control">
                     <ul class="control-filler">
-                      <div class="filter-option__wrapper">
-                        <li class="filter-option filter-checkbox">
-                          <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="selfie" id="filter-selfie" checked>
-                          <label for="filter-selfie">Сделал селфи с акулой</label>
-                        </li>
-                        <li class="filter-option filter-checkbox">
-                          <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="beach" id="filter-beach" checked>
-                          <label for="filter-beach">Обгорел на пляже</label>
-                        </li>
-                      </div>
-                      <div class="filter-option__wrapper">
-                        <li class="filter-option filter-checkbox">
-                          <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="actor" id="filter-actor">
-                          <label for="filter-actor">Видел Чака Норриса</label>
-                        </li>
-                        <li class="filter-option filter-checkbox">
-                          <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="souvenir" id="filter-souvenir">
-                          <label for="filter-souvenir">Накупил сувениров</label>
-                        </li>
-                      </div>
-                      <div class="filter-option__wrapper">
-                        <li class="filter-option filter-checkbox">
-                          <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="tower" id="filter-tower" checked>
-                          <label for="filter-tower">Удержал башню</label>
-                        </li>
-                        <li class="filter-option filter-checkbox">
-                          <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="hotel" id="filter-hotel">
-                          <label for="filter-hotel">Разгромил отель</label>
-                        </li>
-                      </div>
+                      <li class="filter-option filter-checkbox">
+                        <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="selfie" id="filter-selfie" checked>
+                        <label for="filter-selfie">Сделал селфи с акулой</label>
+                      </li>
+                      <li class="filter-option filter-checkbox filter-plage">
+                        <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="beach" id="filter-beach" checked>
+                        <label for="filter-beach">Обгорел на пляже</label>
+                      </li>
+                      <li class="filter-option filter-checkbox filter-see">
+                        <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="actor" id="filter-actor">
+                        <label for="filter-actor">Видел Чака Норриса</label>
+                      </li>
+                      <li class="filter-option filter-checkbox filter-memento">
+                        <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="souvenir" id="filter-souvenir">
+                        <label for="filter-souvenir">Накупил сувениров</label>
+                      </li>
+                      <li class="filter-option filter-checkbox filte-belfry">
+                        <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="tower" id="filter-tower" checked>
+                        <label for="filter-tower">Удержал башню</label>
+                      </li>
+                      <li class="filter-option filter-checkbox filter-hostelry">
+                        <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="hotel" id="filter-hotel">
+                        <label for="filter-hotel">Разгромил отель</label>
+                      </li>
                     </ul>
                   </div>
                 </fieldset>
