--- a/source/catalog.html
+++ b/source/catalog.html
@@ -96,35 +96,45 @@
             <div class="photos__comment">
               <p class="comment__author-name"><b>Антон</b>(12 часов назад)</p>
               <p class="comment__text">Соседи будут рады!</p>
-              <p class="comment__like"><img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"><b>нравится: 666</b></p>
+              <div class="conversely-comment__like">
+                <p class="comment__like"><img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"><b>нравится: 666</b></p>
+              </div>
             </div>
           </div>
           <div class="user__photos">
             <div class="photos__comment">
               <p class="comment__author-name"><b>Борис</b>(20 часов назад)</p>
               <p class="comment__text">Здесь могла быть ваша цитата о высоком и вечном.</p>
-              <p class="comment__like"><img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"><b>нравится: 215</b></p>
+              <div class="conversely-comment__like">
+                <p class="comment__like"><img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"><b>нравится: 215</b></p>
+              </div>
             </div>
           </div>
           <div class="user__photos">
             <div class="photos__comment">
               <p class="comment__author-name"><b>Сергей</b>(25 часов назад)</p>
               <p class="comment__text">Самая кубанская в мире!</p>
-              <p class="comment__like"><img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"><b>нравится: 4</b></p>
+              <div class="conversely-comment__like">
+                <p class="comment__like"><img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"><b>нравится: 4</b></p>
+              </div>
             </div>
           </div>
           <div class="user__photos">
             <div class="photos__comment">
               <p class="comment__author-name"><b>Максим</b>(40 часов назад)</p>
               <p class="comment__text">Где снег-то?</p>
-              <p class="comment__like"><img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"><b>нравится: 150</b></p>
+              <div class="conversely-comment__like">
+                <p class="comment__like"><img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"><b>нравится: 150</b></p>
+              </div>
             </div>
           </div>
           <div class="user__photos">
             <div class="photos__comment">
               <p class="comment__author-name"><b>Надежда</b>(45 часов назад)</p>
               <p class="comment__text">Всем GM и взаимные лайки!</p>
-              <p class="comment__like"><img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"><b>нравится: 2560</b></p>
+              <div class="conversely-comment__like">
+                <p class="comment__like"><img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"><b>нравится: 2560</b></p>
+              </div>
             </div>
           </div>
         </div>
