--- a/source/catalog.html
+++ b/source/catalog.html
@@ -52,7 +52,7 @@
           </nav>
         </div>
       </div>
-      <div class="photos__wrapper">
+      <div class="photos__wrapper-title">
         <h1 class="photos__title">
           Фотографии
           пользователей
@@ -96,7 +96,7 @@
             <div class="photos__comment">
               <p class="comment__author-name"><b>Антон</b>(12 часов назад)</p>
               <p class="comment__text">Соседи будут рады!</p>
-              <div class="conversely-comment__like">
+              <div class="conversely-comment__like conversely-like">
                 <p class="comment__like"><img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"><b>нравится: 666</b></p>
               </div>
             </div>
@@ -114,7 +114,7 @@
             <div class="photos__comment">
               <p class="comment__author-name"><b>Сергей</b>(25 часов назад)</p>
               <p class="comment__text">Самая кубанская в мире!</p>
-              <div class="conversely-comment__like">
+              <div class="conversely-comment__like conversely-like">
                 <p class="comment__like"><img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"><b>нравится: 4</b></p>
               </div>
             </div>
@@ -123,7 +123,7 @@
             <div class="photos__comment">
               <p class="comment__author-name"><b>Максим</b>(40 часов назад)</p>
               <p class="comment__text">Где снег-то?</p>
-              <div class="conversely-comment__like">
+              <div class="conversely-comment__like conversely-like">
                 <p class="comment__like"><img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"><b>нравится: 150</b></p>
               </div>
             </div>
@@ -132,32 +132,32 @@
             <div class="photos__comment">
               <p class="comment__author-name"><b>Надежда</b>(45 часов назад)</p>
               <p class="comment__text">Всем GM и взаимные лайки!</p>
-              <div class="conversely-comment__like">
+              <div class="conversely-comment__like conversely-like">
                 <p class="comment__like"><img src="img/gallery/heart.svg" width="13" height="12" alt="сердечко"><b>нравится: 2560</b></p>
               </div>
             </div>
           </div>
         </div>
+        <div class="user__circulation">
+          <p class="photos__text">
+            Затмите их всех!<br>
+            Выкладывайте все, что накопилось в телефоне!
+          </p>
+        </div>
       </section>
       <section class="photos-filters">
         <div class="photos-filters__wrapper">
-          <div class="user__circulation">
-            <p class="photos__text">
-              Затмите их всех!
-              Выкладывайте все, что накопилось в телефоне!
-            </p>
-          </div>
           <div class="user__foto"></div>
           <div class="range__filter">
             <div class="range__filter-wrapper">
               <svg width="44" height="44" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M32 28H36V12C36 10.9391 35.5786 9.92172 34.8284 9.17157C34.0783 8.42143 33.0609 8 32 8H16V12H32V28ZM12 32V0H8V8H0V12H8V32C8 33.0609 8.42143 34.0783 9.17157 34.8284C9.92172 35.5786 10.9391 36 12 36H32V44H36V36H44V32H12Z" fill="#D22856"/>
               </svg>
-              <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="svg-none" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M16 4C18.3734 4 20.6935 4.70379 22.6669 6.02236C24.6402 7.34094 26.1783 9.21509 27.0866 11.4078C27.9948 13.6005 28.2325 16.0133 27.7694 18.3411C27.3064 20.6689 26.1635 22.8071 24.4853 24.4853C22.8071 26.1635 20.6689 27.3064 18.3411 27.7694C16.0133 28.2324 13.6005 27.9948 11.4078 27.0866C9.21509 26.1783 7.34095 24.6402 6.02237 22.6668C4.70379 20.6935 4.00001 18.3734 4.00001 16C4.00001 12.8174 5.26429 9.76515 7.51473 7.51472C9.76516 5.26428 12.8174 4 16 4ZM16 0C12.8355 0 9.74207 0.938384 7.11088 2.69649C4.4797 4.45459 2.42894 6.95345 1.21793 9.87706C0.0069325 12.8007 -0.309921 16.0177 0.307443 19.1214C0.924806 22.2251 2.44866 25.0761 4.6863 27.3137C6.92394 29.5513 9.77487 31.0752 12.8786 31.6926C15.9823 32.3099 19.1993 31.9931 22.1229 30.7821C25.0466 29.5711 27.5454 27.5203 29.3035 24.8891C31.0616 22.2579 32 19.1645 32 16C32 11.7565 30.3143 7.68687 27.3137 4.68629C24.3131 1.68571 20.2435 0 16 0Z" fill="rgba(40,54,69,30%)"/>
                 <path d="M16 24.29C18.1536 24.1422 20.1708 23.1824 21.644 21.6046C23.1172 20.0268 23.9366 17.9486 23.9366 15.79C23.9366 13.6314 23.1172 11.5532 21.644 9.97538C20.1708 8.39759 18.1536 7.43782 16 7.29" fill="rgba(40,54,69,30%)"/>
               </svg>
-              <svg width="48" height="43" viewBox="0 0 48 43" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <svg class="svg-none" width="48" height="43" viewBox="0 0 48 43" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M33.12 17.88L15.24 0L12.41 2.83L17.17 7.59L6.88 17.88C6.3182 18.4425 6.00264 19.205 6.00264 20C6.00264 20.795 6.3182 21.5575 6.88 22.12L17.88 33.12C18.4425 33.6818 19.205 33.9974 20 33.9974C20.795 33.9974 21.5575 33.6818 22.12 33.12L33.12 22.12C33.6818 21.5575 33.9974 20.795 33.9974 20C33.9974 19.205 33.6818 18.4425 33.12 17.88ZM10.41 20L20 10.42L29.59 20H10.41ZM38 23C38 23 34 27.33 34 30C34 31.0609 34.4214 32.0783 35.1716 32.8284C35.9217 33.5786 36.9391 34 38 34C39.0609 34 40.0783 33.5786 40.8284 32.8284C41.5786 32.0783 42 31.0609 42 30C42 27.33 38 23 38 23Z" fill="rgba(40,54,69,30%)"/>
                 <path d="M48 40H0V43H48V40Z" fill="rgba(40,54,69,30%)"/>
               </svg>
@@ -166,20 +166,26 @@
                 <div class="toggle" tabindex="0" style="left: 80%"></div>
               </div>
             </div>
-            <!--<div class="range__filter-wrapper">
-              <img class="saturation" src="img/range-filter/fill.svg" width="48" height="43" alt="насыщенность">
+            <div class="range__filter-wrapper range__filter-none">
+              <svg class="saturation"width="48" height="43" viewBox="0 0 48 43" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M33.12 17.88L15.24 0L12.41 2.83L17.17 7.59L6.88 17.88C6.3182 18.4425 6.00264 19.205 6.00264 20C6.00264 20.795 6.3182 21.5575 6.88 22.12L17.88 33.12C18.4425 33.6818 19.205 33.9974 20 33.9974C20.795 33.9974 21.5575 33.6818 22.12 33.12L33.12 22.12C33.6818 21.5575 33.9974 20.795 33.9974 20C33.9974 19.205 33.6818 18.4425 33.12 17.88ZM10.41 20L20 10.42L29.59 20H10.41ZM38 23C38 23 34 27.33 34 30C34 31.0609 34.4214 32.0783 35.1716 32.8284C35.9217 33.5786 36.9391 34 38 34C39.0609 34 40.0783 33.5786 40.8284 32.8284C41.5786 32.0783 42 31.0609 42 30C42 27.33 38 23 38 23Z" fill="#D22856"/>
+                <path d="M48 40H0V43H48V40Z" fill="#D22856"/>
+                </svg>
               <div class="range__control">
                 <div class="scale"></div>
                 <div class="toggle" tabindex="0" style="left: 20%"></div>
               </div>
             </div>
-            <div class="range__filter-wrapper">
-              <img class="contrast" src="img/range-filter/contrast.svg" width="32" height="32" alt="контраст">
+            <div class="range__filter-wrapper range__filter-none">
+              <svg class="contrast"width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M16 4C18.3734 4 20.6935 4.70379 22.6669 6.02236C24.6402 7.34094 26.1783 9.21509 27.0866 11.4078C27.9948 13.6005 28.2325 16.0133 27.7694 18.3411C27.3064 20.6689 26.1635 22.8071 24.4853 24.4853C22.8071 26.1635 20.6689 27.3064 18.3411 27.7694C16.0133 28.2324 13.6005 27.9948 11.4078 27.0866C9.21509 26.1783 7.34095 24.6402 6.02237 22.6668C4.70379 20.6935 4.00001 18.3734 4.00001 16C4.00001 12.8174 5.26429 9.76515 7.51473 7.51472C9.76516 5.26428 12.8174 4 16 4ZM16 0C12.8355 0 9.74207 0.938384 7.11088 2.69649C4.4797 4.45459 2.42894 6.95345 1.21793 9.87706C0.0069325 12.8007 -0.309921 16.0177 0.307443 19.1214C0.924806 22.2251 2.44866 25.0761 4.6863 27.3137C6.92394 29.5513 9.77487 31.0752 12.8786 31.6926C15.9823 32.3099 19.1993 31.9931 22.1229 30.7821C25.0466 29.5711 27.5454 27.5203 29.3035 24.8891C31.0616 22.2579 32 19.1645 32 16C32 11.7565 30.3143 7.68687 27.3137 4.68629C24.3131 1.68571 20.2435 0 16 0Z" fill="#D22856"/>
+                <path d="M16 24.29C18.1536 24.1422 20.1708 23.1824 21.644 21.6046C23.1172 20.0268 23.9366 17.9486 23.9366 15.79C23.9366 13.6314 23.1172 11.5532 21.644 9.97538C20.1708 8.39759 18.1536 7.43782 16 7.29" fill="#D22856"/>
+                </svg>
               <div class="range__control">
                 <div class="scale"></div>
                 <div class="toggle" tabindex="0" style="left: 50%"></div>
               </div>
-            </div>-->
+            </div>
           </div>
           <div class="post-it__user-foto">
             <button class="button-user button-post-it" type="submit">Запостить</button>
