Добавил картинки и сделал таблицу для планшета и десктопа

--- a/source/index.html
+++ b/source/index.html
@@ -222,6 +222,7 @@
                 <p class="tariff__number">1,99 USD</p>
               </th>
               <th class="color color-line">
+                <div class="red-hit"><p class="red-hit-text">хит</p></div>
                 <p class="tariff__description">СТАНДАРТ</p>
                 <p class="tariff__number">3,99 USD</p>
               </th>
@@ -232,7 +233,7 @@
             </tr>
             <tr class="tariff__item">
               <td class="cell">
-                Розовый фильтр
+                <p class="table-text">Розовый фильтр</p>
               </td>
               <td>
                 <img src="img/gallery/table/yes.png" width="31" height="21" alt="yes">
@@ -246,7 +247,7 @@
             </tr>
             <tr class="tariff__item">
               <td class="cell">
-                Смайлики
+                <p class="table-text">Смайлики</p>
               </td>
               <td>
                 <img src="img/gallery/table/no.png" width="27" height="27" alt="no">
@@ -260,7 +261,7 @@
             </tr>
             <tr class="tariff__item">
               <td class="cell">
-                Комментарии
+                <p class="table-text">Комментарии</p>
               </td>
               <td>
                 <img src="img/gallery/table/no.png" width="27" height="27" alt="no">
