сделал мобильную таблицу

--- a/source/index.html
+++ b/source/index.html
@@ -233,12 +233,12 @@
             </tr>
             <tr class="tariff__item">
               <td class="cell">
-                <p class="table-text">Розовый фильтр</p>
+                <p class="table-text text1">Розовый фильтр</p>
               </td>
               <td>
                 <img src="img/gallery/table/yes.png" width="31" height="21" alt="yes">
               </td>
-              <td>
+              <td class="mobile-version">
                 <img src="img/gallery/table/yes.png" width="31" height="21" alt="yes">
               </td>
               <td>
@@ -247,7 +247,7 @@
             </tr>
             <tr class="tariff__item">
               <td class="cell">
-                <p class="table-text">Смайлики</p>
+                <p class="table-text text2">Смайлики</p>
               </td>
               <td>
                 <img src="img/gallery/table/no.png" width="27" height="27" alt="no">
@@ -261,7 +261,7 @@
             </tr>
             <tr class="tariff__item">
               <td class="cell">
-                <p class="table-text">Комментарии</p>
+                <p class="table-text text3">Комментарии</p>
               </td>
               <td>
                 <img src="img/gallery/table/no.png" width="27" height="27" alt="no">
@@ -355,5 +355,6 @@
         </div>
       </div>
     </footer>
+    <script src="js/script.js"></script>
   </body>
 </html>
