сделал модулбные окна и меню в форме

--- a/source/form.html
+++ b/source/form.html
@@ -231,12 +231,14 @@
         <div class="modal-error__wrapper">
           <h2 class="error-text modal-text">Что-то пошло<br>не так!</h2>
           <p>
-            Проверьте поля,выделенные<br>красным,скорее всего вы забыли<br>их заполнить
+            Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить
           </p>
         </div>
       </div>
-      <div class="modal__background-button-error">
-        <button class="button-error" type="submit">ок</button>
+      <div class="button-error--wrapper">
+        <div class="modal__background-button-error">
+          <button class="button-error" type="submit">ок</button>
+        </div>
       </div>
     </section>
     <section class="visually-hidde modal__despatch">
@@ -250,8 +252,8 @@
           </p>
         </div>
       </div>
-      <div class="modal__background-button">
-        <div class="modal-despatch__wrapper">
+      <div class="button-despatch--wrapper">
+        <div class="modal__background-button-despatch">
           <button class="button-despatch" type="submit">закрыть окно</button>
         </div>
       </div>
