сделал каталог,и подготовил футер социальные кнопки

--- a/source/form.html
+++ b/source/form.html
@@ -206,13 +206,13 @@
         <div class="page-footer__social social">
           <ul class="social__list">
             <li class="social__item">
-              <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy_ru">Мы в Твиттере</a>
+              <a class="visually-hidden social__link social__link--twitter" href="https://twitter.com/htmlacademy_ru">Мы в Твиттере</a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+              <a class="visually-hidden social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--youtube" href="https://www.youtube.com/channel/UChUxTMjJGo-JDRY8pNTGL2g">Мы в Ютюбе</a>
+              <a class="visually-hidden social__link social__link--youtube" href="https://www.youtube.com/channel/UChUxTMjJGo-JDRY8pNTGL2g">Мы в Ютюбе</a>
             </li>
           </ul>
         </div>
@@ -226,7 +226,7 @@
         </div>
       </div>
     </footer>
-    <section class="visually-hidde modal__error">
+    <section class="modal__error">
       <div class="modal__background-text">
         <div class="modal-error__wrapper">
           <h2 class="error-text modal-text">Что-то пошло<br>не так!</h2>
@@ -241,7 +241,7 @@
         </div>
       </div>
     </section>
-    <section class="visually-hidde modal__despatch">
+    <section class="modal__despatch">
       <div class="modal__background-text">
         <div class="modal-despatch__wrapper">
           <h2 class="despatch-text modal-text">Ваша заявка отправлена</h2>
