--- a/source/index.html
+++ b/source/index.html
@@ -33,7 +33,7 @@
               <path d="M10.7851 33.6407C10.0561 33.6355 9.35868 33.3471 8.84503 32.8384C8.33138 32.3298 8.04314 31.6421 8.04316 30.9253C8.04316 31.6438 7.75354 32.333 7.23772 32.8419C6.7219 33.3508 6.02194 33.6381 5.29114 33.6407C6.02194 33.6433 6.7219 33.9305 7.23772 34.4395C7.75354 34.9484 8.04316 35.6376 8.04316 36.356C8.04314 35.6393 8.33138 34.9516 8.84503 34.4429C9.35868 33.9343 10.0561 33.6459 10.7851 33.6407Z" fill="#D22856"/>
               </svg>
           </a>
-          <nav class="main-nav main-nav--opened main-nav--nojs">
+          <nav class="main-nav main-nav--closed main-nav--nojs">
             <button class="main-nav__toogle" type="button">
               <span class="visually-hidden">Открыть меню</span>
             </button>
@@ -335,13 +335,13 @@
         <div class="page-footer__social social">
           <ul class="social__list">
             <li class="social__item">
-              <a class="social__link social__link--twitter" href="https://twitter.com/htmlacademy_ru">Мы в Твиттере</a>
+              <a class="visually-hidden social__link social__link--twitter" href="https://twitter.com/htmlacademy_ru">Мы в Твиттере</a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
+              <a class="visually-hidden social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--youtube" href="https://www.youtube.com/channel/UChUxTMjJGo-JDRY8pNTGL2g">Мы в Ютюбе</a>
+              <a class="visually-hidden social__link social__link--youtube" href="https://www.youtube.com/channel/UChUxTMjJGo-JDRY8pNTGL2g">Мы в Ютюбе</a>
             </li>
           </ul>
         </div>
