--- a/source/catalog.html
+++ b/source/catalog.html
@@ -96,6 +96,7 @@
         </div>
         <div class="photos__wrapper">
           <div class="user__photos">
+            <img src="img/gallery/mobile/photo-1-mobile.jpg" width="280" height="180" alt="фото авто">
             <div class="photos__comment">
               <p class="comment__author-name"><b>Левон</b>(5 часов назад)</p>
               <p class="comment__text">Вчера он на луну летал,сегодня в руки к нам попал.</p>
