добавляю фото в каталог и в фильтр

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -81,6 +81,11 @@
           </p>
         </div>
         <div class="photo-panorama__wrapper">
+          <picture>
+            <source media="(min-width: 1200px)" srcset="img/gallery/desktop/panorama-desktop.jpg 1x, img/gallery/desktop/panorama-desktop@2x.jpg 2x">
+            <source media="(min-width: 660px)" srcset="img/gallery/tablet/panorama-tablet.jpg 1x, img/gallery/tablet/panorama-tablet@2x.jpg 2x">
+            <img src="img/gallery/mobile/panorama-mobile.jpg" srcset="img/gallery/mobile/panorama-mobile@2x.jpg 2x" alt="фото моста">
+          </picture>
           <div class="photo__panorama">
             <p class="panorama__block">панорама дня</p>
           </div>
@@ -96,7 +101,11 @@
         </div>
         <div class="photos__wrapper">
           <div class="user__photos">
-            <img src="img/gallery/mobile/photo-1-mobile.jpg" width="280" height="180" alt="фото авто">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/gallery/desktop/photo-1-desktop.jpg 1x, img/gallery/desktop/photo-1-desktop@2x.jpg 2x">
+              <source media="(min-width: 660px)" srcset="img/gallery/tablet/photo-1-tablet.jpg 1x, img/gallery/tablet/photo-1-tablet@2x.jpg 2x">
+              <img src="img/gallery/mobile/photo-1-mobile.jpg" srcset="img/gallery/mobile/photo-1-mobile@2x.jpg 2x" alt="фото авто">
+            </picture>
             <div class="photos__comment">
               <p class="comment__author-name"><b>Левон</b>(5 часов назад)</p>
               <p class="comment__text">Вчера он на луну летал,сегодня в руки к нам попал.</p>
@@ -106,6 +115,11 @@
             </div>
           </div>
           <div class="user__photos">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/gallery/desktop/photo-2-desktop.jpg 1x, img/gallery/desktop/photo-2-desktop@2x.jpg 2x">
+              <source media="(min-width: 660px)" srcset="img/gallery/tablet/photo-2-tablet.jpg 1x, img/gallery/tablet/photo-2-tablet@2x.jpg 2x">
+              <img src="img/gallery/mobile/photo-2-mobile.jpg" srcset="img/gallery/mobile/photo-2-mobile@2x.jpg 2x" alt="фото барабанной установки">
+            </picture>
             <div class="photos__comment">
               <p class="comment__author-name"><b>Антон</b>(12 часов назад)</p>
               <p class="comment__text">Соседи будут рады!</p>
@@ -115,6 +129,11 @@
             </div>
           </div>
           <div class="user__photos">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/gallery/desktop/photo-3-desktop.jpg 1x, img/gallery/desktop/photo-3-desktop@2x.jpg 2x">
+              <source media="(min-width: 660px)" srcset="img/gallery/tablet/photo-3-tablet.jpg 1x, img/gallery/tablet/photo-3-tablet@2x.jpg 2x">
+              <img src="img/gallery/mobile/photo-3-mobile.jpg" srcset="img/gallery/mobile/photo-3-mobile@2x.jpg 2x" alt="фото окон небоскрёба">
+            </picture>
             <div class="photos__comment">
               <p class="comment__author-name"><b>Борис</b>(20 часов назад)</p>
               <p class="comment__text">Здесь могла быть ваша цитата о высоком и вечном.</p>
@@ -124,6 +143,11 @@
             </div>
           </div>
           <div class="user__photos">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/gallery/desktop/photo-4-desktop.jpg 1x, img/gallery/desktop/photo-4-desktop@2x.jpg 2x">
+              <source media="(min-width: 660px)" srcset="img/gallery/tablet/photo-4-tablet.jpg 1x, img/gallery/tablet/photo-4-tablet@2x.jpg 2x">
+              <img src="img/gallery/mobile/photo-4-mobile.jpg" srcset="img/gallery/mobile/photo-4-mobile@2x.jpg 2x" alt="фото рынок бахчи">
+            </picture>
             <div class="photos__comment">
               <p class="comment__author-name"><b>Сергей</b>(25 часов назад)</p>
               <p class="comment__text">Самая кубанская в мире!</p>
@@ -133,6 +157,11 @@
             </div>
           </div>
           <div class="user__photos">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/gallery/desktop/photo-5-desktop.jpg 1x, img/gallery/desktop/photo-5-desktop@2x.jpg 2x">
+              <source media="(min-width: 660px)" srcset="img/gallery/tablet/photo-5-tablet.jpg 1x, img/gallery/tablet/photo-5-tablet@2x.jpg 2x">
+              <img src="img/gallery/mobile/photo-5-mobile.jpg" srcset="img/gallery/mobile/photo-5-mobile@2x.jpg 2x" alt="фото горное ущелье">
+            </picture>
             <div class="photos__comment">
               <p class="comment__author-name"><b>Максим</b>(40 часов назад)</p>
               <p class="comment__text">Где снег-то?</p>
@@ -142,6 +171,11 @@
             </div>
           </div>
           <div class="user__photos">
+            <picture>
+              <source media="(min-width: 1200px)" srcset="img/gallery/desktop/photo-6-desktop.jpg 1x, img/gallery/desktop/photo-6-desktop@2x.jpg 2x">
+              <source media="(min-width: 660px)" srcset="img/gallery/tablet/photo-6-tablet.jpg 1x, img/gallery/tablet/photo-6-tablet@2x.jpg 2x">
+              <img src="img/gallery/mobile/photo-6-mobile.jpg" srcset="img/gallery/mobile/photo-6-mobile@2x.jpg 2x" alt="фото крыло самолёта">
+            </picture>
             <div class="photos__comment">
               <p class="comment__author-name"><b>Надежда</b>(45 часов назад)</p>
               <p class="comment__text">Всем GM и взаимные лайки!</p>
@@ -160,7 +194,12 @@
       </section>
       <section class="photos-filters">
         <div class="photos-filters__wrapper">
-          <div class="user__foto"></div>
+          <div class="user__foto">
+            <picture>
+              <source media="(min-width: 660px)" srcset="img/gallery/tablet/photo-7-tablet.jpg 1x, img/gallery/tablet/photo-7-tablet@2x.jpg 2x">
+              <img class="photo-filter" src="img/gallery/mobile/photo-7-mobile.jpg" srcset="img/gallery/mobile/photo-7-mobile@2x.jpg 2x" alt="фото зимней дороги">
+            </picture>
+          </div>
           <div class="range__filter">
             <div class="range__filter-wrapper">
               <svg width="44" height="44" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -199,10 +238,10 @@
                 <div class="toggle" tabindex="0" style="left: 50%"></div>
               </div>
             </div>
-          </div>
-          <div class="post-it__user-foto">
-            <button class="button-user button-post-it" type="submit">Запостить</button>
-            <button class="button-user button-cancel" type="submit">Отмена</button>
+            <div class="post-it__user-foto">
+              <button class="button-user button-post-it" type="submit">Запостить</button>
+              <button class="button-user button-cancel" type="submit">Отмена</button>
+            </div>
           </div>
         </div>
       </section>
