--- a/source/index.html
+++ b/source/index.html
@@ -119,7 +119,7 @@
       <section class="our__proposals">
         <div class="our-proposals__wrapper">
           <ul class="proposal__list">
-            <li class="proposal__item">
+            <li class="proposal__item item-one">
               <h3 class="proposal__title">Поднимает настроение</h3>
               <p class="proposal__description">
                 Приложение позволит вам победить
@@ -127,15 +127,15 @@
                 буквально в несколько кликов!
               </p>
             </li>
-            <li class="proposal__item">
+            <li class="proposal__item item-two">
               <h3 class="proposal__title">Меняет мир вокруг</h3>
-              <p class="proposal__description">
+              <p class="proposal__description center-text">
                 Сделайте снимок и украсте его
                 смайликом или текстовой подписью,
                 чтобы усилить эффект
               </p>
             </li>
-            <li class="proposal__item">
+            <li class="proposal__item item-three">
               <h3 class="proposal__title">Заводит новых друзей</h3>
               <p class="proposal__description">
                 Ставьте лайки, комментируйте,
@@ -316,7 +316,11 @@
       </section>
       <section class="map">
         <h2 class="visually-hidden">Карта</h2>
-        <div class="map__wrapper"></div>
+        <div class="map__wrapper">
+          <iframe class="map-mobile" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603787253323!2d30.320858716354522!3d59.93871648187622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2suk!4v1621840297893!5m2!1sru!2suk" width="320" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          <iframe class="map-tablet" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603787253323!2d30.320858716354522!3d59.93871648187622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2suk!4v1621840297893!5m2!1sru!2suk" width="660" height="374" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          <iframe class="map-desktop" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603787253323!2d30.320858716354522!3d59.93871648187622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2suk!4v1621840297893!5m2!1sru!2suk" width="1200" height="502" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
       </section>
     </main>
     <footer class="page-footer">
